--- a/Medieinstitutet/HTML/project01/index.html
+++ b/Medieinstitutet/HTML/project01/index.html
@@ -13,7 +13,14 @@
     <div id="content">
         <section>
         <h1 id="h1">Đogecoin</h1>
-            <div id="quote">
+        
+        <div class="navigation">
+            <a href="index.html">Home</a>
+            <a href="price.html">Price</a>
+            <a href="news.html">News</a>
+        </div>
+          
+        <div id="quote">
                 <p>A man is never happy, but spends his whole life in striving after something that he thinks will make him so; he seldom attains his goal, and when he does, it is only to be disappointed; he is mostly shipwrecked in the end, and comes into harbour with mast and rigging gone. And then, it is all one whether he is happy or miserable; for his life was never anything more than a present moment always vanishing; and now it is over.</p>
                 <p>There is not much to be got anywhere in the world. It is filled with misery and pain; if a man escapes these, boredeom lies in wait for him at every corner. Nay more; it is evil which generally has the upper hand, and folly that makes the most noise. Fate is cruel and mankind pitiable.</p>
                 <p>A poet or philosopher should have no fault to find with his age if it only permits him to do his work undisturbed in his own corner; nor with his fate if the corner granted him allows of his following his vocation without having to think about other people.</p>
@@ -40,12 +47,11 @@
                         src="http://jigsaw.w3.org/css-validator/images/vcss"
                         alt="Valid CSS!" /></a>
             </div> 
-            <div id="nav">
+            <div class="nav">
                 <a href="mailto:fete.edvin@gmail.com">fete.edvin@gmail.com</a>
                 <a href="copyright.html">&copy Copyright 2021 Project Dogecoin</a>
                 <a href="contact.html">Contact</a>
-                <a href="#top">Top</a>
-                <br>
+                <a href="#top">Top↑</a>
             </div>
         </footer>
     </div>
