--- a/Medieinstitutet/HTML/project02/index.html
+++ b/Medieinstitutet/HTML/project02/index.html
@@ -7,30 +7,71 @@
     <title>Boxes</title>
     <link rel="stylesheet" href="./styles/main.css">
 </head>
-<body>
+<body class="body">
     <header>
         <div class="banner">
-            <div class="logotype">Logo</div>
-            <div>Home, Projects, About, etc</div>
-            <div>Login, search</div>
+            <div id="logotype">
+                <img src="hasbulla.png" height="100px" width="120px">
+            </div>
+            <div id="nav">
+                <a href="index.html">Home</a>
+                <a href="index.html">About</a>
+                <a href="index.html">Contact</a>
+            </div>
+            <div class="login">Login, search</div>
         </div>
     </header>
 
 
     <main>
-        <div class="main">
-            <div class="sidebar">Sidebar</div>
-            <div>Content</div>
-            <div>Content</div>
-            <div class="horizontal">Sideways navigation</div>
-        </div>
-    </main>
+            <div class="wrapper">
+                <div class="box a">
+                    <div class="slave">
+                        <h2>Article 1</h2>
+                        <p>Have you ever looked at a tree without a single word of like or dislike, without a single image? What then takes place? For the first time, you see the tree as it is and you see the beauty of it, the colour, depth and vitality of it.</p>
+                    </div>
+                    <div class="slave">
+                        <h2>Article 2</h2>
+                        <p>Beauty is no quality in things themselves: It exists merely in the mind which contemplates them; and each mind perceives a different beauty. Beauty is no quality in things themselves: It exists merely in the mind which contemplates them; and each mind perceives a different beauty.Beauty is no quality in things themselves: It exists merely in the mind which contemplates them; and each mind perceives a different beauty.Beauty is no quality in things themselves: It exists merely in the mind which contemplates them; and each mind perceives a different beauty.Beauty is no quality in things themselves: It exists merely in the mind which contemplates them; and each mind perceives a different beauty.Beauty is no quality in things themselves: It exists merely in the mind which contemplates them; and each mind perceives a different beauty.Beauty is no quality in things themselves: It exists merely in the mind which contemplates them; and each mind perceives a different beauty.</p>
+                    </div>
+                    <div class="slave">
+                        <h2>Article 3</h2>
+                        <p>No man ever threw away life while it was worth keeping.</p>
+                    </div>
+                    <div class="slave">
+                        <h2>Article 4</h2>
+                        <p>Generally speaking, the errors in religion are dangerous; those in philosophy only ridiculous.</p>
+                    </div>
+                    <div class="slave">
+                        <h2>Article 5</h2>
+                        <p>We can easily forgive a child who is afraid of the dark; the real tragedy of life is when men are afraid of the light.</p>
+                    </div>
+                </div>
+                
+                <div class="box b">
+                    <div class="slave"><h3>Alternative box 1</h3>
+                    </div>
+                    <div class="slave"><h3>Alternative box 2</h3>
+                    </div>
+                    <div class="slave"><h3>Alternative box 3</h3>
+                    </div>
+                    <div class="slave"><h3>Alternative box 4</h3>
+                    </div>
+                    <div class="slave"><h3>Alternative box 5</h3>
+                    </div>
+
+                    </div>
+                </div>
+            </div>
+        </main>
 
 
     <footer>
         <div class="footbar">
             <div>Footer</div>
             <div>Footer, extended</div>
+            <div>Footer, 3rd</div>
+            <div>Footer, 4th</div>
         </div>
     </footer>
 </body>
